--- a/backend/learningtracker/templates/main/index.html
+++ b/backend/learningtracker/templates/main/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Web site created using create-react-app"/>
         <link rel="apple-touch-icon" href="/logo192.png"/>
         <link rel="manifest" href="/manifest.json"/>
-        <title>React App</title>
+        <title>Learning Tracker</title>
         <script defer="defer" src="/static/js/main.9ea36bba.js"></script>
         <link href="/static/css/main.f855e6bc.css" rel="stylesheet">
     </head>
